--- a/src/Taboo/MainBundle/Resources/config/routing.yml
+++ b/src/Taboo/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-taboo_main_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: TabooMainBundle:Default:index }
+index:
+    pattern:  /
+    defaults: { _controller: TabooMainBundle:Main:index }
