--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,12 +5,18 @@ jms_security_extra:
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        Taboo\MainBundle\Entity\Person:
+            algorithm: sha1
+            iterations: 1
+            encode_as_base64: false
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
+        persons:
+            entity: { class: TabooMainBundle:Person, property: username }
         in_memory:
             memory:
                 users:
@@ -18,6 +24,18 @@ security:
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
 
     firewalls:
+        taboo_secure:
+            pattern: ^
+            anonymous: ~
+            http_basic:
+                realm: "Tab-oo Secure"
+            form_login:
+                check_path: /login_check
+                login_path: /login
+            logout:
+                path: /logout
+                target: /
+            
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -39,5 +57,6 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
+        - { path: ^/dashboard, roles: ROLE_USER }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
