started canvas work.

--- a/src/Taboo/MainBundle/Resources/config/routing.yml
+++ b/src/Taboo/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 index:
     pattern:  /
     defaults: { _controller: TabooMainBundle:Main:index }
+
+composerBase:
+    pattern: /composer
+    defaults: { _controller: TabooMainBundle:Composer:base }
