--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -26,7 +26,7 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ TabooMainBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
