Fixed composer. Almost back to where I was, only with proper classes.

--- a/src/Taboo/MainBundle/Resources/config/routing.yml
+++ b/src/Taboo/MainBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ index:
 composerBase:
     pattern: /composer
     defaults: { _controller: TabooMainBundle:Composer:base }
+    
+sandbox:
+    pattern: /sandbox
+    defaults: { _controller: TabooMainBundle:Main:sandbox }
